--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -441,21 +441,15 @@ You can use the list day command to find out the index of the activity you wish 
 
 // tag::autoschedule[]
 === Auto Schedule: `autoschedule`
-Generates a list of activities for the specified days based on the activity's *priority* and the *number of times it
-has been scheduled on the timetable.*. Activity with the *highest priority* and the *least number of time being scheduled on the timetable* will be chosen to be scheduled.
+Generates a list of activities for the specified days based on the *number of times it
+has been scheduled on the timetable.*. Activity with the *least number of time being scheduled on the timetable* will be chosen to be scheduled.
+For cases where there is two with the same lowest counts, the one with the higher priority will be chosen.
 
 If the end time of the activity chosen overlaps with the next activity's start time, the
-next activity with the `next highest priority` and `second lowest number of count in the timetable` are chosen. This process will repeat until it finds a suitable activity to schedule.
+next activity with the next `lowest number of count in the timetable` will be checked. This process will repeat until it finds a suitable activity to schedule or that all the activities that it has checked is deemed unsuitable.
 
-* *Timing* can be specified if there is an activity that is confirmed to do at that timing.
-
-* A specific *activity name* can be specified using `n/` instead of `t/` if there is an activity that has been confirmed to do.
-
-* *Location* for those activities can be specified, otherwise it is assumed to be any location.
-
-* The *day* to schedule for can be specified, otherwise it is assumed to be scheduled for all days.
 * Timing can be specified if there is an activity that is confirmed to do at that timing.
-* An `activity name` can be specified if there is an activity that has been confirmed to do.
+* An `activity name` can be specified using `n/` instead of `t/` if there is an activity that has been confirmed to do.
 * Location for that `day` can be specified, otherwise it is assumed to be any location.
 * The `Day` to schedule for can be specified, otherwise it is assumed to be scheduled for all days.
 
