--- a/docs/team/wongchuankai.adoc
+++ b/docs/team/wongchuankai.adoc
@@ -10,7 +10,7 @@
 The purpose of the Project Portfolio is to document and showcase my contributions to the software project, `EzWatchList`.
 
 Our team was initially tasked with enhancing a basic command line interface(CLI) desktop application
-for our Software Engineering project. We are allowed to morph it to other application that uses command line interface.
+for our Software Engineering project. We are also allowed to morph it to other application that uses command line interface.
 Thus, we chose to morph it into a movie records management system called EzWatchList. This enhanced
 version provides a unique, clean and simple way of organizing and keeping track of movie or TV show watch list.
 
@@ -19,7 +19,7 @@ version provides a unique, clean and simple way of organizing and keeping track 
 image::Ui.png[]
 Figure 1. The graphical interface for Ezwatchlist.
 
-`EzWatchList` helps users to keep track of movie or TV show in a watch list. User can simply
+`EzWatchList` helps users to keep track and organise movie or TV show in a watch list. User can simply
 interact with the application by inputting commands into the interface.
 
 Main features of EzWatchList:
